samples/_failures_safe/1761471059_6663d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b66d27e4.c: In function ‘main’:
./samples/SAFE/__tmp_b66d27e4.c:181:12: error: missing terminating " character
  181 |     printf("Line:Col Type
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_b66d27e4.c:181:5: error: expected expression at end of input
  181 |     printf("Line:Col Type
      |     ^~~~~~
./samples/SAFE/__tmp_b66d27e4.c:181:5: error: expected declaration or statement at end of input
